--- a/INSTALL
+++ b/INSTALL
@@ -38,3 +38,13 @@ distribution. Type
    python setup.py install --help 
 
 for more options.
+
+Architecture specific options
+=============================
+
+Pysam has been compiled on various linux systems and works
+with python 2.6 and python 2.5.
+
+Python 2.7 and Python 3 have not been tested.
+
+Windows support does not work yet
