--- a/INSTALL
+++ b/INSTALL
@@ -13,7 +13,7 @@ most of the modern Linux/Unix distributions. If you do not have this
 library installed, you can still compile the rest of SAMtools by
 manually modifying one line in Makefile.
 
-Pysam requires pyrex (0.9.8 or greater) and python (2.6 or greater).
+Pysam requires Python (2.6 or greater) and Cython (0.22 or greater).
 It has not been tested on many other platforms.
 
 Compilation
