--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+An online version of the installation instructions can be found here:
+http://pysam.readthedocs.io/en/latest/release.html
+
 =============
 Release notes
 =============
@@ -11,6 +14,11 @@ contains a series of bugfixes.
 * [#544] reading header from remote TabixFiles now works.
 * [#531] add missing tag types H and A. A python float will now be
   added as 'f' type instead of 'd' type.
+* [#543] use FastaFile instead of Fastafile in pileup.
+* [#546] set is_modified flag in setAttribute so updated attributes
+  are output.
+* [#537] allow tabix index files to be created in a custom location.
+* [#530] add get_index_statistics() method
 
 
 Release 0.12.0.1
