--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,40 @@ http://pysam.readthedocs.io/en/latest/release.html
 Release notes
 =============
 
+Release 0.14.0
+==============
+
+* SAM/BAM/CRAM headers are now managed by a separate AlignmentHeader
+  class.
+* AlignmentFile.header.as_dict() returns an ordered dictionary.
+* Use "stop" instead of "end" to ensure consistency to
+  VariantFile. The end designations have been kept for backwards
+  compatibility.
+
+* [#611] and [#293] CRAM repeated fetch now works, each iterator
+  reloads index if multiple_iterators=True
+* [#608] pysam now wraps htslib 1.7 and samtools 1.7.
+* [#580] reference_name and next_reference_name can now be set to "*"
+  (will be converted to None to indicate an unmapped location)
+* [#302] providing no coordinate to count_coverage will not count from
+  start/end of contig.
+* [#325] @SQ records will be automatically added to header if they are
+  absent from text section of header.
+* [#529] add get_forward_sequence() and get_forward_qualities()
+  methods
+* [#577] add from_string() and to_dict()/from_dict() methods to
+  AlignedSegment. Rename tostring() to to_string() throughout for
+  consistency
+* [#589] return None from build_alignment_sequence if no MD tag is set
+* [#528] add PileupColumn.__len__ method
+
+Backwards incompatible changes (should only affect a small number of users):
+
+* AlignmentFile.header now returns an AlignmentHeader object. Use
+  AlignmentFile.header.to_dict() to get the dictionary as previously.
+* AlignmentFile.text is now AlignmentFile.header.__str__()
+* AlignmentFile, FastaFile now raise IOError.
+
 Release 0.13.0
 ===============
 
