{AH} clear up release.rst, update news for v0.15.1 release

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,15 @@ http://pysam.readthedocs.io/en/latest/release.html
 Release notes
 =============
 
+Release 0.15.1
+==============
+
+Bugfix release.
+
+* [#716] raise ValueError if tid is out of range when writing
+* [#697] release version using cython 0.28.5 for python 3.7
+  compatibility
+
 Release 0.15.0
 ==============
 
