--- a/NEWS
+++ b/NEWS
@@ -301,7 +301,7 @@ changes, for example::
 
 will become::
 
-   cimport pysam.libcamtools
+   cimport pysam.libcsamtools
 
 Release 0.9.1
 =============
