--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,12 @@ Release 1.0.0?
 * python 2.7 support has been removed. The minimum python version is now 3.2 with
   versions 3.6-3.11 tested.
 
+Release 0.21.0
+==============
+
+This release wraps htslib/bcftools version 1.17 and samtools version 1.17.
+
+* [
 
 Release 0.20.0
 ==============
