Include NEWS from doc/release.rst and link issues/PRs
Remove doc/release.rst's duplicate copy of the release notes, instead
including NEWS via a reStructuredText include directive. This means
that NEWS needs to be valid reStructuredText, but it mostly already is.

Install a Sphinx 7.2.5+ include-read hook that expands plain `PR #NNN`
and `#NNN` references in the NEWS file into role syntax that the extlinks
extension can expand into links to pysam issues/PRs at the GitHub repo.

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,5 @@
-An online version of the installation instructions can be found here:
-http://pysam.readthedocs.io/en/latest/release.html
-
-=============
-Release notes
-=============
+.. An online version of the release history can be found here:
+.. http://pysam.readthedocs.io/en/latest/release.html
 
 Release 0.21.0
 ==============
