Consistently capitalise PyPI thus [minor]

--- a/INSTALL
+++ b/INSTALL
@@ -5,7 +5,7 @@ http://pysam.readthedocs.io/en/latest/installation.html
 Installing pysam
 ================
 
-Pysam can be installed through conda_, pypi_ and from the repository.
+Pysam can be installed through conda_, PyPI_ and from the repository.
 The recommended way to install pysam is through conda/bioconda.
 
 Conda installation
@@ -22,7 +22,7 @@ makes sure that dependencies are installed. Also, compilation flags
 will be set automatically, which will potentially save a lot of
 trouble on OS X.
 
-Pypi installation
+PyPI installation
 =================
 
 Pysam provides a python interface to the functionality contained
@@ -32,7 +32,7 @@ can be combined, ``builtin`` and ``external``.
 Builtin
 -------
 
-The typical installation will be through pypi_::
+The typical installation will be through PyPI_::
 
    pip install pysam
 
@@ -86,7 +86,7 @@ To install from repository, type::
 
     python setup.py install
 
-For compilation options, see the section on Pypi installation above.
+For compilation options, see the section on PyPI installation above.
 
 Requirements
 ============
